--- a/src/app/component/homepage/homepage.component.css
+++ b/src/app/component/homepage/homepage.component.css
@@ -1,101 +1,82 @@
-.hero-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+.body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  overflow-y: auto;
+  height: 80vh;
+}
+
+.search {
+  display: flex;
+  padding: 0 5px;
+  margin-left: 450px;
+}
+
+.container {
+  width: 620px;
+  margin: 50px auto;
+  display: flex;
+  grid-gap: 15px;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.words {
+  width: 180px;
+  color: rgb(112, 140, 145);
+  word-wrap: break-word;
+  font-size: 15px;
+  line-height: 20px;
+}
+
+.footer-container {
+  background: rgb(220, 220, 220);
+  height: 280px;
+  @media screen and (max-width: 680px) {
+    height: 260px;
   }
-  .nav {
-    height: 60px;
-    background: white;
-    display: flex;
-    align-items: center;
-    padding: 0 36px;
-    overflow-x: hidden;
-  }
-  
-  .search {
-    display: flex;
-    padding: 0 5px;
-    margin-left: 450px;
-  }
-  
-  .link {
-    display: flex;
-    padding: 0 5px;
-    align-items: center;
-    cursor: pointer;
-  }
-  .nav-menu {
-    display: flex;
-    flex: 1;
-    margin-left: 5px;
-  }
-  
-  .container {
-    width: 500px;
-    display: flex;
-    margin: 50px auto;
-    display: grid;
-    grid-gap: 25px;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-  
-  .words {
-    color: rgb(112, 140, 145);
-    word-wrap: break-word;
-    font-size: 16px;
-    line-height: 20px;
-  }
-  
-  .footer-container {
-    background: rgb(220, 220, 220);
-    height: 280px;
-    @media screen and (max-width: 680px) {
-      height: 260px;
-    }
-  }
-  
-  .footer-link-container {
-    width: 100%;
-    padding-top: 40px;
-  }
-  
-  .footer-link-wrap {
-    width: 33.33%;
-    display: inline-block;
-    text-align: center;
-  }
-  
-  .footer-link {
-    cursor: pointer;
-    text-decoration: none;
-    color: black;
-    font-size: 18px;
-  }
-  
-  .rights-container {
-    width: 100%;
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .social-media-container {
-    width: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .social-media-wrap {
-    width: 60px;
-    display: inline-block;
-    text-align: center;
-  }
-  
-  .social-media-link {
-    color: black;
-    font-size: 10px;
-    width: 33.33%;
-    cursor: pointer;
-  }
-  
+}
+
+.footer-link-container {
+  width: 100%;
+  padding-top: 40px;
+}
+
+.footer-link-wrap {
+  width: 33.33%;
+  display: inline-block;
+  text-align: center;
+}
+
+.footer-link {
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
+  font-size: 18px;
+}
+
+.rights-container {
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.social-media-container {
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social-media-wrap {
+  width: 60px;
+  display: inline-block;
+  text-align: center;
+}
+
+.social-media-link {
+  color: black;
+  font-size: 10px;
+  width: 33.33%;
+  cursor: pointer;
+}
