--- a/src/app/component/homepage/homepage.component.css
+++ b/src/app/component/homepage/homepage.component.css
@@ -2,7 +2,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   overflow-y: auto;
-  height: 80vh;
+  height: calc(100vh - 72px);
 }
 
 .search {
