ER-32-Added and integrated the Search component

--- a/src/app/component/search-result/search-result.component.html
+++ b/src/app/component/search-result/search-result.component.html
@@ -1,1 +1,10 @@
-<p>search-result works!</p>
+<h1>Search Results</h1>
+
+<div class="main-container">
+    <div class="search-container">
+        <app-ride-search (searchRide)="searchRide()"></app-ride-search>
+    </div>
+    <div class="result-container">
+
+    </div>
+</div>
