--- a/src/app/component/sign-in/sign-in.component.html
+++ b/src/app/component/sign-in/sign-in.component.html
@@ -1,1 +1,29 @@
-<p>sign-in works!</p>
+<h1 mat-dialog-title>Log In</h1>
+<div mat-dialog-content>
+    <form [formGroup]="SignInFormGroup" (submit)="Signin()">
+        <mat-form-field>
+            <mat-label>Email Address*</mat-label>
+            <input matInput formControlName="Email" placeholder="Email" type="email">
+            <mat-error *ngIf="SignInFormGroup?.controls['Email']?.errors?.required">Email is required
+            </mat-error>
+            <mat-error *ngIf="SignInFormGroup?.controls['Email']?.errors?.pattern">Please Enter valid
+                Email
+            </mat-error>
+        </mat-form-field>
+
+        <mat-form-field style="margin-right: 15px;">
+            <mat-label>Password*</mat-label>
+            <input matInput formControlName="Password" type="Password" placeholder="Password">
+            <mat-error *ngIf="SignInFormGroup?.controls['Password']?.errors?.required">Password is required
+            </mat-error>
+            <mat-error *ngIf="SignInFormGroup?.controls['Password']?.errors?.minlength">Password must be
+                atleast 8 charaters</mat-error>
+        </mat-form-field>
+
+        <br>
+
+        <button mat-raised-button color="primary" type="submit">Submit</button>
+        <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
+
+    </form>
+</div>
