--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Sign Up</h1>
+<h1 mat-dialog-title>Profile</h1>
 <div mat-dialog-content>
     <form [formGroup]="ProfileFormGroup" (submit)="updateProfile()">
         <mat-form-field style="margin-right: 15px;">
@@ -45,7 +45,7 @@
 
         <button mat-raised-button color="primary" type="submit">Update</button>
         <button mat-raised-button color="accent">Reset</button>
-        <button mat-raised-button color="warn">Delete Account</button>
+        <button mat-raised-button color="warn" (click)="deleteAccount()">Delete Account</button>
 
     </form>
 </div>
