added rides and update ride component

--- a/src/app/component/my-rides/my-rides.component.html
+++ b/src/app/component/my-rides/my-rides.component.html
@@ -1,1 +1,29 @@
-<p>my-rides works!</p>
+<div class="body">
+    <h2 style="padding-left: 40px;"> Tomorrow </h2>
+    <p style="padding-left: 40px;"> Halifax → Dartmouth </p>
+    <p style="padding-left: 40px;"> <strong> 1 </strong> ride available </p>
+    <div class="ride-container">
+        <div class="ride"> 
+            <div class="content"> 
+                <div class="time"> 
+                    <span> 08:40 </span>
+                    <span> 15:10 </span>
+                 </div>
+                   <div class="location"> 
+                       <span> Halifax </span>
+                       <span> Dartmouth </span>
+                    </div>
+                    <div class="price">
+                        <span style="float: right">  $&nbsp;400 </span>
+                    </div>
+                </div>
+    
+                <div class="name">
+                    <span class="glyphicon glyphicon-user icon user-icon dropdown-toggle" data-toggle="dropdown"></span>
+                    <span> Vehicle Owner name </span>
+                </div>
+           
+           </div>
+    </div>
+    </div>
+    
