--- a/src/app/component/profile/profile.component.html
+++ b/src/app/component/profile/profile.component.html
@@ -45,7 +45,7 @@
 
         <button mat-raised-button color="primary" type="submit">Update</button>
         <button mat-raised-button color="accent">Reset</button>
-        <button mat-raised-button color="warn" (click)="deleteAccount()">Delete Account</button>
+        <!-- <button mat-raised-button color="warn" (click)="deleteAccount()">Delete Account</button> -->
 
     </form>
 </div>
