--- a/src/app/component/my-rides/my-rides.component.html
+++ b/src/app/component/my-rides/my-rides.component.html
@@ -16,12 +16,18 @@
                     <div class="price">
                         <span style="float: right">  $&nbsp;400 </span>
                     </div>
+                    <div class="action">
+                        <a (click)="edit()"> Edit </a>
+                    </div>
+    
                 </div>
     
                 <div class="name">
                     <span class="glyphicon glyphicon-user icon user-icon dropdown-toggle" data-toggle="dropdown"></span>
                     <span> Vehicle Owner name </span>
                 </div>
+              
+            
            
            </div>
     </div>
