--- a/src/app/component/notification/notification.component.html
+++ b/src/app/component/notification/notification.component.html
@@ -1,1 +1,24 @@
-<p>notification works!</p>
+<mat-card>
+  <mat-card-title>Notifications</mat-card-title>
+  <mat-card-content [style.overflow]="'auto'" [style.height.px]="'300'">
+
+    <h2><b>New Ones !!</b></h2>
+    <b>Ride Confirmed </b>
+    <ul>
+      <li>Hey there! Your ride has been Confirmed by the user</li>
+    </ul>
+
+
+    <h2><b>Past Notifications</b></h2>
+    <b>New Rides your area </b>
+    <ul>
+      <li>Hello John! New rides has been found in your area</li>
+    </ul>
+    <b>Black Friday Discount </b>
+    <ul>
+      <li>Hello John! As you are new customer you will get 20 % discount from us!
+        Happy Holidays!</li>
+    </ul>
+  </mat-card-content>
+
+</mat-card>
