--- a/src/app/component/my-rides/my-rides.component.css
+++ b/src/app/component/my-rides/my-rides.component.css
@@ -1,13 +1,17 @@
 .body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  overflow-y: auto;
+  zoom: 145%;
+  max-width: 650px;
+  margin: auto;
+  overflow-y: -moz-scrollbars-vertical;
 }
 .ride-container {
-  margin-top: 10px;
-  margin-left: 10px;
-  display: grid;
-  padding: 20px 50px 36px 30px;
+  margin-top: 0px;
+  margin-left: 50px;
+  display: table;
+  padding: 20px 50px 36px 100px;
+  overflow: scroll;
 }
 
 .ride {
@@ -19,6 +23,7 @@
   box-shadow: 0 0 8px 0 rgba(100, 100, 100, 0.25);
   cursor: pointer;
   transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+  overflow: auto;
 }
 .content {
   display: flex;
@@ -36,7 +41,6 @@
   padding: 20px 20px;
   text-align: center;
 }
-
 .name {
   padding: 20px 20px;
 }
