--- a/src/app/component/my-rides/my-rides.component.html
+++ b/src/app/component/my-rides/my-rides.component.html
@@ -1,35 +1,69 @@
-<div class="body">
-    <h2 style="padding-left: 40px;"> Tomorrow </h2>
-    <p style="padding-left: 40px;"> Halifax → Dartmouth </p>
-    <p style="padding-left: 40px;"> <strong> 1 </strong> ride available </p>
+<div class="body" xmlns="http://www.w3.org/1999/html">
+
     <div class="ride-container">
-        <div class="ride"> 
-            <div class="content"> 
-                <div class="time"> 
+      <b><h1 style="padding-left: 10px;"> Tomorrow </h1></b>
+      <p style="padding-left: 10px;"> Halifax → Dartmouth </p>
+      <p style="padding-left: 10px;"> <strong> 2 </strong> ride available </p>
+      <div class = "pre-scrollable" >
+        <div class="ride">
+
+            <div class="content">
+                <div class="time">
                     <span> 08:40 </span>
-                    <span> 15:10 </span>
+                    <br/><span>20 Minutes</span>
+                    <br/>
+                    <span> 09:00 </span>
                  </div>
-                   <div class="location"> 
+                   <div class="location">
                        <span> Halifax </span>
+                       <br/>
+                       <br/>
                        <span> Dartmouth </span>
                     </div>
                     <div class="price">
-                        <span style="float: right">  $&nbsp;400 </span>
+                        <span style="float: right">  $&nbsp;3 </span>
                     </div>
                     <div class="action">
                         <a (click)="edit()"> Edit </a>
                     </div>
-    
+
                 </div>
-    
+
                 <div class="name">
                     <span class="glyphicon glyphicon-user icon user-icon dropdown-toggle" data-toggle="dropdown"></span>
-                    <span> Vehicle Owner name </span>
+                    <span> Smith </span>
                 </div>
-              
-            
-           
-           </div>
+        </div>
+      <div class="ride">
+        <div class="content">
+          <div class="time">
+            <span> 08:30 </span>
+            <br/><span>30 Minutes</span>
+            <br/>
+            <span> 09:00 </span>
+          </div>
+          <div class="location">
+            <span> Halifax </span>
+            <br/>
+            <br/>
+            <span> Dartmouth </span>
+          </div>
+          <div class="price">
+            <span style="float: right">  $&nbsp;4 </span>
+          </div>
+          <div class="action">
+            <a (click)="edit()"> Edit </a>
+          </div>
+
+        </div>
+
+        <div class="name">
+          <span class="glyphicon glyphicon-user icon user-icon dropdown-toggle" data-toggle="dropdown"></span>
+          <span> Roger </span>
+        </div>
+
+      </div>
+
     </div>
     </div>
-    
+    </div>
