--- a/src/app/component/ride-search/ride-search.component.html
+++ b/src/app/component/ride-search/ride-search.component.html
@@ -3,7 +3,7 @@
 <form [formGroup]="SearchFormGroup" (submit)="search()">
     <mat-form-field >
         <mat-label>Leave From*</mat-label>
-        <input matInput formControlName="LeaveFrom" placeholder="Leave From" type="text">
+        <input matInput formControlName="LeaveFrom" placeholder="Leave From" type="text" [(ngModel)]="_dataservice.searchCriteria.LeaveFrom">
     </mat-form-field>
 
     <mat-form-field>
