--- a/src/app/component/search-result/search-result.component.css
+++ b/src/app/component/search-result/search-result.component.css
@@ -6,3 +6,53 @@ h1{
     width: 70vw;
     margin: auto;
 }
+.body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    overflow-y: auto;
+  }
+  .ride-container {
+    margin-top: 10px;
+    margin-left: 10px;
+    display: grid;
+    padding: 20px 50px 36px 30px;
+  }
+  
+  .ride {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    margin-bottom: 30px;
+    border-radius: 15px;
+    box-shadow: 0 0 8px 0 rgba(100, 100, 100, 0.25);
+    cursor: pointer;
+    transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
+  }
+  .content {
+    display: flex;
+  }
+  .time {
+    display: grid;
+    padding: 20px 20px;
+  }
+  .location {
+    display: grid;
+    padding: 20px 20px;
+  }
+  .price {
+    display: grid;
+    padding: 20px 20px;
+    text-align: center;
+  }
+  
+  .name {
+    padding: 20px 20px;
+  }
+  .action {
+    padding: 20px 20px;
+  }
+  
+.result-container{
+  overflow-y: auto;
+  height: 75vh;
+}
