Added routing to homepage for logo

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -5,7 +5,7 @@
             <img
             width=50%;
             height=70vh;
-            src="assets/images/logo.jpeg"/> 
+            src="assets/images/logo.jpeg" class="logo" routerLink="/main/home-page" /> 
         </div>
         <div class="col-md-9 right-align">
             <a class="link" routerLink="/main/publish-ride">
