--- a/src/app/component/homepage/homepage.component.css
+++ b/src/app/component/homepage/homepage.component.css
@@ -2,7 +2,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   overflow-y: auto;
-  height: calc(100vh - 72px);
+  height: calc(100vh - 65px);
 }
 
 .search {
@@ -12,11 +12,16 @@
 }
 
 .container {
-  width: 620px;
+  height: 19vh;
+  width: 75vw;
   margin: 50px auto;
   display: flex;
   grid-gap: 15px;
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.sub-container{
+  width: 33%;
 }
 
 .words {
@@ -25,14 +30,16 @@
   word-wrap: break-word;
   font-size: 15px;
   line-height: 20px;
+  text-align: center;
+    margin: auto;
 }
 
 .footer-container {
   background: rgb(220, 220, 220);
-  height: 280px;
-  @media screen and (max-width: 680px) {
-    height: 260px;
-  }
+  height: 15vh;
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
 }
 
 .footer-link-container {
