--- a/src/app/component/ride-search/ride-search.component.html
+++ b/src/app/component/ride-search/ride-search.component.html
@@ -1,6 +1,12 @@
 <div class="search-ride-container">
+  <img
+    width=100%
+    height=300px;
+    src="assets/images/carpool.png"/>
+</div>
+<div class="search-ride-container">
 
-<form [formGroup]="SearchFormGroup" (submit)="search()">
+  <form [formGroup]="SearchFormGroup" (submit)="search()">
     <mat-form-field >
         <mat-label>Leave From*</mat-label>
         <input matInput formControlName="LeaveFrom" placeholder="Leave From" type="text">
