--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,23 +1,20 @@
 <header class="header">
     <div class="row no-margin">
         <div class="col-md-3">
-            
-            <img
-            width=50%;
-            height=70vh;
-            src="assets/images/logo.jpeg" class="logo" routerLink="/main/home-page" /> 
+
+            <img width=50%; height=70vh; src="assets/images/logo.jpeg" class="logo" routerLink="/main/home-page" />
         </div>
         <div class="col-md-9 right-align">
             <a class="link" routerLink="/main/publish-ride">
                 <span class="glyphicon glyphicon-plus publish-icon"></span>
                 <span>Publish a ride</span>
-                </a>
+            </a>
             <a class="link" (click)="logIn()" *ngIf="!_dataService?.userSession?.access_token">
                 <span class="glyphicon glyphicon-log-in no-border-icon"></span>
-            <span>Log In</span>
+                <span>Log In</span>
 
             </a>
-            <a class="link" (click)="signUp()"*ngIf="!_dataService?.userSession?.access_token" >
+            <a class="link" (click)="signUp()" *ngIf="!_dataService?.userSession?.access_token">
                 <span class="glyphicon glyphicon-edit no-border-icon"></span>
                 <span>Sign Up</span>
             </a>
@@ -25,12 +22,15 @@
                 <span class="glyphicon glyphicon-user icon user-icon dropdown-toggle" data-toggle="dropdown"></span>
 
                 <ul class="dropdown-menu menu-position">
-                  <li class="profile-menu" routerLink="/main/profile"><a class="link menu-link">
-                    <span class="glyphicon glyphicon-user no-border-icon"></span>
-                    Profile</a></li>
-                  <li class="profile-menu" (click)="logout()"><a class="link menu-link">
-                    <span class="glyphicon glyphicon-log-out no-border-icon"></span>
-                    Log out</a></li>
+                    <li class="profile-menu" routerLink="/main/profile"><a class="link menu-link">
+                            <span class="glyphicon glyphicon-user no-border-icon"></span>
+                            Profile</a></li>
+                    <li class="profile-menu" routerLink="/main/my-rides"><a class="link menu-link">
+                            <span class="glyphicon glyphicon-edit no-border-icon"></span>
+                            My Ride</a></li>
+                    <li class="profile-menu" (click)="logout()"><a class="link menu-link">
+                            <span class="glyphicon glyphicon-log-out no-border-icon"></span>
+                            Log out</a></li>
                 </ul>
             </a>
 
