Updated CSS for Ride results

--- a/src/app/component/search-result/search-result.component.html
+++ b/src/app/component/search-result/search-result.component.html
@@ -23,7 +23,7 @@
                             <span style="float: right"> $&nbsp;{{ride?.price}} </span>
                         </div>
                         <div class="action">
-                            <a> Book </a>
+                            <a (click)="book()"> Book </a>
                         </div>
 
                     </div>
