Delete Ride Completed

--- a/src/app/component/my-rides/my-rides.component.html
+++ b/src/app/component/my-rides/my-rides.component.html
@@ -2,7 +2,7 @@
 
     <div class="ride-container">
       <p style="padding-left: 10px;"> Mumford Terminal → Dalhousie </p>
-      <p style="padding-left: 10px;"> <strong> {{myRide.length}} </strong> ride available </p>
+      <p style="padding-left: 10px;"> <strong> {{_dataService.myRide.length}} </strong> ride available </p>
       <div class = "pre-scrollable" >
         <!-- <div class="ride">
 
@@ -63,7 +63,7 @@
 
       </div> -->
 
-      <div class="ride" *ngFor="let ride of myRide">
+      <div class="ride" *ngFor="let ride of _dataService.myRide">
         <div class="content">
             <div class="time">
                 <span> {{ride?.time}} </span>
@@ -77,10 +77,10 @@
                 <span style="float: right"> $&nbsp;{{ride?.price}} </span>
             </div>
             <div class="action">
-              <a (click)="edit()"> Edit </a>
+              <a (click)="edit(ride.id)"> Edit </a>
             </div>
             <div class="action">
-              <a (click)="delete()"> Delete </a>
+              <a (click)="delete(ride.id)"> Delete </a>
             </div>
 
         </div>
