--- a/src/app/component/my-rides/my-rides.component.html
+++ b/src/app/component/my-rides/my-rides.component.html
@@ -65,10 +65,11 @@
 
       <div class="ride" *ngFor="let ride of _dataService.myRide">
         <div class="content">
-            <div class="time">
-                <span> {{ride?.time}} </span>
-
-            </div>
+          <div class="time">
+            <span> {{ride?.time|date : 'fullDate'}} </span>
+           <br/>
+            <span>{{ride?.time|date :'HH:mm'}}</span>
+        </div>
             <div class="location">
                 <span> {{ride?.origin}} </span>
                 <span> {{ride?.destination}} </span>
