Updated the auto refresh of data for my ride

--- a/src/app/component/my-rides/my-rides.component.html
+++ b/src/app/component/my-rides/my-rides.component.html
@@ -1,7 +1,7 @@
 <div class="body">
 
     <div class="ride-container">
-      <p style="padding-left: 10px;"> Mumford Terminal → Dalhousie </p>
+      <p style="padding-left: 10px;"> Clayton Park → Dalhousie </p>
       <p style="padding-left: 10px;"> <strong> {{_dataService.myRide.length}} </strong> ride available </p>
       <div class = "pre-scrollable" >
         <!-- <div class="ride">
