--- a/src/app/component/publish-ride/publish-ride.component.html
+++ b/src/app/component/publish-ride/publish-ride.component.html
@@ -54,6 +54,6 @@
     <br>
 
     <button mat-raised-button color="primary" type="submit">Publish</button>
-    <button mat-raised-button color="warn" >Reset</button>
+    <button mat-raised-button color="warn" type="reset" (click)="reset()" >Reset</button>
 
 </form>
